fixed spacing in img

--- a/FruitStand/css/styles.css
+++ b/FruitStand/css/styles.css
@@ -181,11 +181,10 @@ main div.FruitGallery {
   flex-wrap: wrap;
 }
 main div.FruitGallery figure {
-  flex-basis: 100%;
-  display: block;
+  flex-basis: 46%;
 }
 main div.FruitGallery figure img {
-  max-width: 50%;
+  width: 100%;
   margin: 1rem 2%;
   padding: 2%;
 }
@@ -251,6 +250,6 @@ footer {
     max-width: auto;
   }
   main div.FruitGallery figure {
-    flex-basis: 15%;
+    flex-basis: 25%;
   }
 }
