--- a/FruitStand/scss/_large.scss
+++ b/FruitStand/scss/_large.scss
@@ -17,6 +17,6 @@ nav ul{
 main{
     max-width: auto;
     div.FruitGallery figure{
-        flex-basis: 15%;
+        flex-basis: 25%;
         }
 }
